<resources>
    <string name="app_name">yummy</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_note">Note</string>
    <string name="title_news">News</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_splash">Get Started</string>
    <string name="title_search_meals">Search Meals</string>
    <string name="title_area">Areas</string>
    <string name="title_all">All</string>
    <string name="title_new">New</string>
    <string name="title_yummy">Yummy</string>
    <string name="title_category">Category</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_notification">Notification</string>
    <string name="title_notification_question">Are you sure you want to delete this note?</string>
    <string name="title_content_note">Enter note here</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_language">Language</string>
    <string name="title_vietnamese">Vietnamese</string>
    <string name="title_english">English</string>
    <string name="title_new_note">New Note</string>
    <string name="title_update_note">Update Note</string>
    <string name="title_name">Name</string>
    <string name="title_content">Content</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_suggest">Suggest</string>
    <string name="title_result">Result</string>

    <string name="text_description">Description</string>
    <string name="text_category_name">Name</string>
    <string name="text_search_meal">Search Meal</string>
    <string name="text_ingredient_name">Rice</string>
    <string name="text_back">Back</string>
    <string name="text_meal">Food</string>
    <string name="text_meal_description">Description</string>
    <string name="text_description_detail">Details</string>
    <string name="text_update">Updating…</string>
    <string name="text_area">Area</string>
    <string name="text_category">Category</string>
    <string name="text_ingredient">Ingredient</string>
    <string name="text_choose_time_to_cook">Choose Time to cook</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">Ok</string>

    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>

    <string name="error_parse_json">Not type Json</string>
    <string name="error_not_empty">Error! Not empty</string>
    <string name="error_not_type">Error! Not type</string>

    <string name="msg_insert_success">Insert Success</string>
    <string name="msg_update_success">Update Success</string>
    <string name="msg_delete_success">Delete Success</string>
    <string name="msg_insert_success_meal_favorite">Insert %s Success</string>
    <string name="msg_delete_success_meal_favorite">Delete %s Success</string>
    <string name="msg_check_internet">Please check your internet connection!</string>
</resources>
