<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />
    <item
        android:id="@+id/menuFavorite"
        android:icon="@drawable/ic_un_favorite"
        android:title="@string/title_favorite" />
    <item
        android:id="@+id/menuNews"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/title_news" />
    <item
        android:id="@+id/menuNote"
        android:icon="@drawable/ic_notes"
        android:title="@string/title_note" />
</menu>
