<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_20"
    android:layout_marginEnd="@dimen/dp_20"
    android:padding="@dimen/dp_16">

    <ImageView
        android:id="@+id/imageNotification"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/ic_notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_40"
        android:layout_toEndOf="@+id/imageNotification"
        android:gravity="center_vertical"
        android:text="@string/title_notification"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageNotification"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/red_berry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageNotification" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:text="@string/title_notification_question"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="7:2"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/custom_button_dialog"
        android:text="@string/action_yes"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
        app:layout_constraintWidth_percent="0.3" />

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/custom_button_dialog"
        android:gravity="center"
        android:text="@string/action_no"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_14"
        app:layout_constraintDimensionRatio="7:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
        app:layout_constraintWidth_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>
