<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

        <View
            android:id="@+id/viewHeader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/red_berry"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textYummy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_8"
            android:fontFamily="@font/chewy"
            android:text="@string/title_yummy"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editSearchMeal"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/custom_edit_text"
            android:drawablePadding="@dimen/dp_15"
            android:gravity="center_vertical"
            android:hint="@string/text_search_meal"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_10"
            android:textSize="@dimen/sp_16"
            app:drawableStartCompat="@drawable/ic_search"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textYummy"
            app:layout_constraintTop_toBottomOf="@+id/textYummy" />

        <TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/title_category"
            android:textColor="@color/red_berry"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_24"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.22"
            app:layout_constraintStart_toStartOf="@+id/textCategory"
            app:layout_constraintTop_toBottomOf="@+id/textCategory"
            app:spanCount="2"
            tools:listitem="@layout/item_category" />

        <TextView
            android:id="@+id/textIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:text="@string/title_ingredients"
            android:textColor="@color/red_berry"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/recyclerCategory"
            app:layout_constraintTop_toBottomOf="@+id/recyclerCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerIngredient"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginEnd="@dimen/dp_24"
            android:background="@drawable/bg_ingredient"
            android:padding="@dimen/dp_8"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textIngredients"
            app:layout_constraintTop_toBottomOf="@+id/textIngredients"
            app:spanCount="2"
            tools:listitem="@layout/item_ingredient" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
