<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/seashell"
        tools:context=".ui.meallist.MealListFragment">

        <View
            android:id="@+id/viewHeader"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/red_berry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewInformationMeal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_8"
            android:background="@drawable/bg_description_radius"
            app:layout_constraintBottom_toBottomOf="@id/textDescriptionDetail"
            app:layout_constraintEnd_toEndOf="@+id/viewHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewHeader" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@android:color/transparent"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewHeader"
            tools:src="@drawable/ic_notification" />

        <TextView
            android:id="@+id/textDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/text_description"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/viewInformationMeal"
            app:layout_constraintTop_toTopOf="@+id/viewInformationMeal"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/textDescriptionDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:fontFamily="@font/roboto_medium"
            android:paddingBottom="@dimen/dp_18"
            android:text="@string/text_description_detail"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@id/viewInformationMeal"
            app:layout_constraintEnd_toEndOf="@+id/viewInformationMeal"
            app:layout_constraintStart_toStartOf="@+id/viewInformationMeal"
            app:layout_constraintTop_toBottomOf="@+id/textDescription"
            tools:lines="3"
            tools:text="@tools:sample/lorem/random" />

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:contentDescription="@null"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/viewHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewHeader"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textTitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:text="@string/text_back"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/buttonBack"
            app:layout_constraintStart_toEndOf="@+id/buttonBack"
            app:layout_constraintTop_toTopOf="@+id/buttonBack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMeals"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_16"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewInformationMeal"
            tools:itemCount="5"
            tools:listitem="@layout/item_meal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
